fix root user problem.

--- a/helloangular/Dockerfile
+++ b/helloangular/Dockerfile
@@ -26,6 +26,9 @@ RUN chgrp -R 0 /usr/share/nginx && \
 RUN chgrp -R 0 /etc/nginx && \
    chmod -R g=u /etc/nginx
 
+RUN chgrp -R 0 /var/cache/nginx && \
+   chmod -R g=u /var/cache/nginx
+
 COPY --from=build ./helloangular/os-sample-java-web/helloangular/dist/build-by-docker /usr/share/nginx/html
 
 COPY --from=build ./helloangular/os-sample-java-web/helloangular/default.conf /etc/nginx/conf.d/default.conf
