--- a/helloangular/Dockerfile
+++ b/helloangular/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:lts-alpine as base
 
-MAINTAINER t-kash
+LABEL maintainer t-kash
 
-WORKDIR helloangular
+WORKDIR /helloangular
 
 RUN apk add git && git clone https://github.com/t-kash/os-sample-java-web.git
 
-WORKDIR os-sample-java-web/helloangular
+WORKDIR /helloangular/os-sample-java-web/helloangular
 
 RUN npm install -g @angular/cli@9.0.1
 
@@ -20,14 +20,8 @@ RUN ng build --prod --output-path=./dist/build-by-docker
 
 FROM nginx:alpine as prod
 
-RUN chgrp -R 0 /usr/share/nginx && \
-   chmod -R g=u /usr/share/nginx
-
-RUN chgrp -R 0 /etc/nginx && \
-   chmod -R g=u /etc/nginx
-
-RUN chgrp -R root /var/cache/nginx /var/run /var/log/nginx && \
-    chmod -R 770 /var/cache/nginx /var/run /var/log/nginx
+RUN chgrp -R root /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx && \
+    chmod -R 770 /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx
 
 COPY --from=build ./helloangular/os-sample-java-web/helloangular/dist/build-by-docker /usr/share/nginx/html
 
