--- a/hellonuxt/Dockerfile
+++ b/hellonuxt/Dockerfile
@@ -17,14 +17,13 @@ FROM base as build
 
 WORKDIR /hellonuxt/os-sample-java-web/hellonuxt
 
-RUN nuxt build -- --spa
-
+RUN npm run build
 
 FROM nginx:alpine as prod
 
 RUN chgrp -R root /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx && \
     chmod -R 770 /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx
 
-COPY --from=build ./hellonuxt/os-sample-java-web/hellonuxt/.nuxt/dist/client /usr/share/nginx/html
+COPY --from=build ./hellonuxt/os-sample-java-web/hellonuxt/dist /usr/share/nginx/html
 
 COPY --from=build ./hellonuxt/os-sample-java-web/hellonuxt/default.conf /etc/nginx/conf.d/default.conf
