--- a/hellonuxt/Dockerfile
+++ b/hellonuxt/Dockerfile
@@ -2,20 +2,20 @@ FROM node:lts-alpine as base
 
 LABEL maintainer t-kash
 
-WORKDIR /hellonext
+WORKDIR /hellonuxt
 
 RUN apk add git && git clone https://github.com/t-kash/os-sample-java-web.git
 
-WORKDIR /hellonext/os-sample-java-web/hellonext
+WORKDIR /hellonuxt/os-sample-java-web/hellonuxt
 
-RUN npm install -g react react-dom next
+RUN npm install -g nuxt
 
 RUN npm install
 
 
 FROM base as build
 
-WORKDIR /hellonext/os-sample-java-web/hellonext
+WORKDIR /hellonuxt/os-sample-java-web/hellonuxt
 
 RUN npm run build
 
@@ -24,6 +24,6 @@ FROM nginx:alpine as prod
 RUN chgrp -R root /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx && \
     chmod -R 770 /usr/share/nginx /etc/nginx /var/cache/nginx /var/run /var/log/nginx
 
-COPY --from=build ./hellonext/os-sample-java-web/hellonext/dist /usr/share/nginx/html
+COPY --from=build ./hellonuxt/os-sample-java-web/hellonuxt/dist /usr/share/nginx/html
 
-COPY --from=build ./hellonext/os-sample-java-web/hellonext/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build ./hellonuxt/os-sample-java-web/hellonuxt/default.conf /etc/nginx/conf.d/default.conf
